[tool.poetry]
name = "nolzapan"
version = "0.1.0"
description = ""
authors = ["d3fau1t <aciddust20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
fastapi = "^0.111.0"
orjson = "^3.10.3"
motor = "^3.4.0"
aiohttp = "^3.9.5"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = "nolzapan, api"
known_third_party = "fastapi,pydantic,orjson,motor,pytz,aiohttp"
